bugfix : long device name in the widget

--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -18,7 +18,7 @@
 		}
 		div.monitor-name-left {
 			display: flex !important;
-			flex: 1;
+			flex: 0 1 auto;
 			padding-left: 5px;
 			float: left;
 			justify-content: flex-start;			
@@ -28,7 +28,7 @@
 		}
 		div.monitor-name-right {
 			display: flex;
-			flex: 1;
+			flex: 0 1 auto;
 			padding-right: 5px;
 			float: right;
 			justify-content: flex-end;
