--- a/core/template/mobile/Monitoring.html
+++ b/core/template/mobile/Monitoring.html
@@ -18,7 +18,7 @@
 		}
 		span.monitor-name-left {
 			display: flex;
-			flex: 1;
+			flex: 0 1 auto;
 			float: left;
 			justify-content: flex-start;
 			align-items: center;
@@ -28,7 +28,7 @@
 		}
 		span.monitor-name-right {
 			display: flex;
-			flex: 1;
+			flex: 0 1 auto;
 			float: right;
 			justify-content: flex-end;
 			align-items: center;
