fix : only apply margin in css if non empty

--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -23,7 +23,7 @@
 			float: left;
 			justify-content: flex-start;			
 		}
-		div.monitor-name-left span {
+		div.monitor-name-left span:not(:empty) {
 			margin-right: 3px;
 		}
 		div.monitor-name-right {
