--- a/core/template/mobile/Monitoring.html
+++ b/core/template/mobile/Monitoring.html
@@ -23,7 +23,7 @@
 			justify-content: flex-start;
 			align-items: center;
 		}
-		span.monitor-name-left i {
+		span.monitor-name-left i:not(:empty) {
 			margin-right: 5px;
 		}
 		span.monitor-name-right {
