--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -1,39 +1,39 @@
 <div class="eqLogic eqLogic-widget text-center allowResize #custom_layout# #eqLogic_class# #class# #category#" data-eqType="#eqType#" data-eqLogic_id="#id#" data-eqLogic_uid="#uid#" data-version="#version#" data-translate-category="#translate_category#" data-category="#category#" data-tags="#tags#" style="width: #width#;height: #height#;#style#;">
 	<style>
-		div.eqLogic-widget[data-eqLogic_uid="#uid#"] div.eqLogic-widget .cmd.monitor-btn {
+		.eqLogic-widget[data-eqLogic_uid="#uid#"] div.eqLogic-widget .cmd.monitor-btn {
 			padding-top: 6px;
 			font-size: 12px !important;
 		}
-		div.eqLogic-widget[data-eqLogic_uid="#uid#"] div.eqLogic-widget.editingMode .cmd.monitor-btn {
+		.eqLogic-widget[data-eqLogic_uid="#uid#"] div.eqLogic-widget.editingMode .cmd.monitor-btn {
 			display: none !important;
 		}
-		div.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-name-flex {
+		.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-name-flex {
 			display: flex;
 			justify-content: space-between;
 		}
-		div.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-name-center {
+		.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-name-center {
 			display: flex;
 			flex: 1;
 			justify-content: center;
 		}
-		div.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-name-left {
+		.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-name-left {
 			display: flex !important;
 			flex: 0 1 auto;
 			padding-left: 5px;
 			float: left;
 			justify-content: flex-start;			
 		}
-		div.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-name-left span:not(:empty) {
+		.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-name-left span:not(:empty) {
 			margin-right: 3px;
 		}
-		div.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-name-right {
+		.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-name-right {
 			display: flex;
 			flex: 0 1 auto;
 			padding-right: 5px;
 			float: right;
 			justify-content: flex-end;
 		}
-		div.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-cmds {
+		.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-cmds {
 			display: block;
 			text-align: left;
 			padding-left: 5px;
