--- a/core/template/mobile/Monitoring.html
+++ b/core/template/mobile/Monitoring.html
@@ -1,10 +1,10 @@
 <div class="eqLogic eqLogic-widget col2" data-eqLogic_id="#id#" data-eqType="#eqType#" data-version="#version#" data-eqLogic_uid="#uid#" data-translate-category="#translate_category#" data-category="#category#" data-tags="#tags#" style="#style#">
 	<style>
-		div.eqLogic-widget[data-eqLogic_uid="#uid#"] span.monitor-name-flex {
+		.eqLogic-widget[data-eqLogic_uid="#uid#"] span.monitor-name-flex {
 			display: flex;
 			padding-left: 5px !important;
 		}
-		div.eqLogic-widget[data-eqLogic_uid="#uid#"] span.monitor-name-center {
+		.eqLogic-widget[data-eqLogic_uid="#uid#"] span.monitor-name-center {
 			display: flex;
 			flex: 1;
 			float: none;
@@ -12,31 +12,31 @@
 			text-align: center;
 			white-space: nowrap;
 		}
-		div.eqLogic-widget[data-eqLogic_uid="#uid#"] span.monitor-name-center span {
+		.eqLogic-widget[data-eqLogic_uid="#uid#"] span.monitor-name-center span {
 			padding-left: 12px !important;
 			padding-right: 12px !important;
 		}
-		div.eqLogic-widget[data-eqLogic_uid="#uid#"] span.monitor-name-left {
+		.eqLogic-widget[data-eqLogic_uid="#uid#"] span.monitor-name-left {
 			display: flex;
 			flex: 0 1 auto;
 			float: left;
 			justify-content: flex-start;
 			align-items: center;
 		}
-		div.eqLogic-widget[data-eqLogic_uid="#uid#"] span.monitor-name-left i:not(:empty) {
+		.eqLogic-widget[data-eqLogic_uid="#uid#"] span.monitor-name-left i:not(:empty) {
 			margin-right: 5px;
 		}
-		div.eqLogic-widget[data-eqLogic_uid="#uid#"] span.monitor-name-right {
+		.eqLogic-widget[data-eqLogic_uid="#uid#"] span.monitor-name-right {
 			display: flex;
 			flex: 0 1 auto;
 			float: right;
 			justify-content: flex-end;
 			align-items: center;
 		}
-		div.eqLogic-widget[data-eqLogic_uid="#uid#"] span.monitor-name-right i {
+		.eqLogic-widget[data-eqLogic_uid="#uid#"] span.monitor-name-right i {
 			margin-right: 10px !important;
 		}
-		div.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-cmds {
+		.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-cmds {
 			display: block;
 			text-align: left;
 			padding-left: 5px;
