--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -1,10 +1,10 @@
 <div class="eqLogic eqLogic-widget text-center allowResize #custom_layout# #eqLogic_class# #class# #category#" data-eqType="#eqType#" data-eqLogic_id="#id#" data-eqLogic_uid="#uid#" data-version="#version#" data-translate-category="#translate_category#" data-category="#category#" data-tags="#tags#" style="width: #width#;height: #height#;#style#;">
 	<style>
-		.eqLogic-widget[data-eqLogic_uid="#uid#"] div.eqLogic-widget .cmd.monitor-btn {
+		div.eqLogic-widget[data-eqLogic_uid="#uid#"] .cmd.monitor-btn {
 			padding-top: 6px;
 			font-size: 12px !important;
 		}
-		.eqLogic-widget[data-eqLogic_uid="#uid#"] div.eqLogic-widget.editingMode .cmd.monitor-btn {
+		div.eqLogic-widget[data-eqLogic_uid="#uid#"].editingMode .cmd.monitor-btn {
 			display: none !important;
 		}
 		.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-name-flex {
