optimize css style in template

--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -7,33 +7,33 @@
 		div.eqLogic-widget[data-eqLogic_uid="#uid#"].editingMode .cmd.monitor-btn {
 			display: none !important;
 		}
-		.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-name-flex {
+		div.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-name-flex {
 			display: flex;
 			justify-content: space-between;
 		}
-		.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-name-center {
+		div.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-name-center {
 			display: flex;
 			flex: 1;
 			justify-content: center;
 		}
-		.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-name-left {
+		div.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-name-left {
 			display: flex !important;
 			flex: 0 1 auto;
 			padding-left: 5px;
 			float: left;
 			justify-content: flex-start;			
 		}
-		.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-name-left span:not(:empty) {
+		div.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-name-left span:not(:empty) {
 			margin-right: 3px;
 		}
-		.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-name-right {
+		div.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-name-right {
 			display: flex;
 			flex: 0 1 auto;
 			padding-right: 5px;
 			float: right;
 			justify-content: flex-end;
 		}
-		.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-cmds {
+		div.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-cmds {
 			display: block;
 			text-align: left;
 			padding-left: 5px;
