--- a/core/template/mobile/Monitoring.html
+++ b/core/template/mobile/Monitoring.html
@@ -23,7 +23,7 @@
 			justify-content: flex-start;
 			align-items: center;
 		}
-		div.eqLogic-widget[data-eqLogic_uid="#uid#"] span.monitor-name-left i:not(:empty) {
+		div.eqLogic-widget[data-eqLogic_uid="#uid#"] span.monitor-name-left span:not(:empty) {
 			margin-right: 5px;
 		}
 		div.eqLogic-widget[data-eqLogic_uid="#uid#"] span.monitor-name-right {
