--- a/core/template/mobile/Monitoring.html
+++ b/core/template/mobile/Monitoring.html
@@ -13,6 +13,9 @@
 			white-space: nowrap;
 		}
 		div.eqLogic-widget[data-eqLogic_uid="#uid#"] span.monitor-name-center span {
+			display: flex;
+			flex: 1;
+			justify-content: center;
 			padding-left: 12px !important;
 			padding-right: 12px !important;
 		}
