--- a/core/template/mobile/Monitoring.html
+++ b/core/template/mobile/Monitoring.html
@@ -13,7 +13,7 @@
 			white-space: nowrap;
 		}
 		div.eqLogic-widget[data-eqLogic_uid="#uid#"] span.monitor-name-center span {
-			display: flex;
+			display: flex !important;
 			flex: 1;
 			justify-content: center;
 			padding-left: 12px !important;
@@ -24,7 +24,7 @@
 			flex: 0 1 auto;
 			float: left;
 			justify-content: flex-start;
-			
+			align-items: center;
 		}
 		div.eqLogic-widget[data-eqLogic_uid="#uid#"] span.monitor-name-left span:not(:empty) {
 			margin-right: 5px;
@@ -34,7 +34,7 @@
 			flex: 0 1 auto;
 			float: right;
 			justify-content: flex-end;
-			
+			align-items: center;
 		}
 		div.eqLogic-widget[data-eqLogic_uid="#uid#"] span.monitor-name-right i {
 			margin-right: 10px !important;
