--- a/core/template/mobile/Monitoring.html
+++ b/core/template/mobile/Monitoring.html
@@ -2,6 +2,7 @@
 	<style>
 		div.eqLogic-widget[data-eqLogic_uid="#uid#"] span.monitor-name-flex {
 			display: flex;
+			justify-content: space-between;
 			padding-left: 5px !important;
 		}
 
