--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -1,14 +1,13 @@
 <div class="eqLogic eqLogic-widget text-center allowResize #custom_layout# #eqLogic_class# #class# #category#" data-eqType="#eqType#" data-eqLogic_id="#id#" data-eqLogic_uid="#uid#" data-version="#version#" data-translate-category="#translate_category#" data-category="#category#" data-tags="#tags#" style="width: #width#;height: #height#;#style#;">
 	<style>
 		div.eqLogic-widget[data-eqLogic_uid="#uid#"] .cmd.monitor-btn {
-			padding-top: 6px;
 			font-size: 12px !important;
 		}
 		div.eqLogic-widget[data-eqLogic_uid="#uid#"].editingMode .cmd.monitor-btn {
 			display: none !important;
 		}
 
-		div.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-name-flex {
+		div.eqLogic-widget[data-eqLogic_uid="#uid#"] div.widget-name.monitor-name-flex {
 			display: flex;
 			justify-content: space-between;
 			padding-left: 5px !important;
@@ -20,36 +19,48 @@
 			float: left;
 			justify-content: flex-start;
 			align-items: center;
+			padding-right: 5px;
+			box-sizing: border-box;
 		}
 		div.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-name-left span:not(:empty) {
 			margin-right: 3px;
 		}
 
-		div.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-name-center {
+		div.eqLogic-widget[data-eqLogic_uid="#uid#"] div.widget-name {
+			overflow: auto;
+		}
+
+		div.eqLogic-widget[data-eqLogic_uid="#uid#"] div.widget-name.monitor-name-center {
 			display: flex;
 			flex: 1 1 auto;
 			justify-content: center;
 			text-align: center;
-			overflow: hidden;
+			padding-left: 5px;
+			padding-right: 5px;
+			box-sizing: border-box;
 		}
 		
+		div.eqLogic-widget[data-eqLogic_uid="#uid#"] div.widget-name.monitor-name-center a {
+			overflow: hidden !important;
+			text-overflow: ellipsis;
+			white-space: nowrap;
+		}
+
 		div.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-name-right {
 			display: flex;
 			flex: 0 1 auto;
 			float: right;
 			justify-content: flex-end;
 			align-items: center;
-			padding-left: 3px;
+			padding-left: 5px;
+			box-sizing: border-box;
 		}
 
-		div.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-name-right .refresh {
-			position: relative;
-		}
-
-		div.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-name-right a {
+		div.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-name-right .cmd.refresh {
+			margin-top: unset !important;
 			margin-right: 5px;
-			margin-top : unset !important;
-		}		
+			color: inherit;
+		}
 		
 		div.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-cmds {
 			display: block;
@@ -63,14 +74,14 @@
 		}
 	</style>
 	<div class="widget-name monitor-name-flex">
-		<div class="widget-name monitor-name-left">
+		<div class="monitor-name-left">
 			<span id="iconSSH#id#"></span>
 			<script>
 				if ('#cnx_ssh#' == 'OK') {
 					document.getElementById('iconSSH#id#').innerHTML = '<i title="Connexion SSH OK" class="cmd monitor-btn fas fa-check tooltips" style="color: var(--al-success-color) !important;"></i>';
 				}
 				if ('#cnx_ssh#' == 'KO') {
-					document.getElementById('iconSSH#id#').innerHTML = '<i title="Connexion SSH KO" class="cmd monitor-btn fas fa-times tooltips" style="color: var(--al-danger-color) !important;"></i>';
+					document.getElementById('iconSSH#id#').innerHTML = '<i title="Connexion SSH KO" class="cmd monitor-btn fas fa-times-circle tooltips" style="color: var(--al-danger-color) !important;"></i>';
 				}
 			</script>
 			<span id="iconCron#id#"></span>
@@ -147,7 +158,7 @@
 			<span class="reportModeVisible">#name_display# <span class="object_name">#object_name#</span></span>
 			<a href="#eqLink#" class="reportModeHidden">#name_display# <span class="object_name">#object_name#</span></a>
 		</div>
-		<div class="widget-name monitor-name-right">	
+		<div class="monitor-name-right">	
 			<span class="cmd refresh cursor" title="Rafraîchir" data-cmd_id="#refresh_id#">
 				<i class="fas fa-sync"></i>
 			</span>
