--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -56,7 +56,7 @@
 
 		div.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-name-right .cmd.refresh {
 			margin-top: unset !important;
-			margin-right: 5px;
+			padding-right: 5px;
 			color: inherit;
 		}
 		
