--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -22,7 +22,7 @@
 			box-sizing: border-box;
 		}
 		div.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-name-left span:not(:empty) {
-			margin-right: 3px;
+			padding-right: 3px;
 		}
 
 		div.eqLogic-widget[data-eqLogic_uid="#uid#"] div.widget-name {
