--- a/core/template/mobile/Monitoring.html
+++ b/core/template/mobile/Monitoring.html
@@ -14,7 +14,7 @@
 			align-items: center;
 		}
 		div.eqLogic-widget[data-eqLogic_uid="#uid#"] span.monitor-name-left span:not(:empty) {
-			margin-right: 5px;
+			padding-right: 5px;
 		}
 
 		div.eqLogic-widget[data-eqLogic_uid="#uid#"] span.monitor-name-center {
@@ -51,8 +51,8 @@
 		}
 
 		div.eqLogic-widget[data-eqLogic_uid="#uid#"] span.monitor-name-right i {
-			margin-right: 5px;
 			margin-top: unset !important;
+			padding-right: 5px;
 		}
 
 		div.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-cmds {
