--- a/core/template/mobile/Monitoring.html
+++ b/core/template/mobile/Monitoring.html
@@ -53,6 +53,7 @@
 		div.eqLogic-widget[data-eqLogic_uid="#uid#"] span.monitor-name-right i {
 			margin-top: unset !important;
 			padding-right: 5px;
+			color: inherit;
 		}
 
 		div.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-cmds {
