--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -57,7 +57,7 @@
 		div.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-name-right .cmd.refresh {
 			margin-top: unset !important;
 			padding-right: 5px;
-			color: inherit;
+			color: inherit !important;
 		}
 		
 		div.eqLogic-widget[data-eqLogic_uid="#uid#"] div.monitor-cmds {
