--- a/core/template/dashboard/AsusWRT.html
+++ b/core/template/dashboard/AsusWRT.html
@@ -153,10 +153,10 @@
 			</script>
 		</div>
 		<div class="widget-name monitor-name-center">
-			<span class="reportModeVisible">#name_display# <span class="object_name">#object_name#</span> (AsusWRT !)</span>
+			<span class="reportModeVisible">#name_display# <span class="object_name">#object_name#</span></span>
 			<a href="#eqLink#" class="reportModeHidden">#name_display# <span class="object_name">#object_name#</span></a>
 		</div>
-		<div class="monitor-name-right">	
+		<div class="monitor-name-right">
 			<span class="cmd refresh cursor" title="Rafraîchir" data-cmd_id="#refresh_id#">
 				<i class="fas fa-sync"></i>
 			</span>
@@ -173,7 +173,7 @@
 	</div>
 	<div class="monitor-cmds">
 		<div class="tooltips" style="display: #distri_name_display#;">
-			<span title="Distribution Linux<br><i>Date de valeur : #distri_name_value#<br>Date de collecte : #distri_name_collect#</i>" style="width:15px;max-width:15px;max-height:15px;">#distri_name_icon#</span>
+			<span title="Distribution AsusWRT<br><i>Date de valeur : #distri_name_value#<br>Date de collecte : #distri_name_collect#</i>" style="width:15px;max-width:15px;max-height:15px;">#distri_name_icon#</span>
 			<span>#distri_name#</span>
 		</div>
 		<div class="tooltips" style="display: #uptime_display#;">
