--- a/core/template/dashboard/AsusWRT.html
+++ b/core/template/dashboard/AsusWRT.html
@@ -125,31 +125,14 @@
 					});
 				});
 			</script>
-			<span class="cmd action poweroff cursor" title="Eteindre l'équipement"  data-type="action" data-subtype="other" data-cmd_id="#cmd_poweroff_id#" style="display: #cmd_poweroff_display#;">
-				<i class="cmd monitor-btn fas fa-power-off"></i>
-			</span>
+			<span id="iconCheckFirmware#id#" class="cmd monitor-btn"></span>
 			<script>
-				document.querySelector('.poweroff[data-cmd_id="#cmd_poweroff_id#"]')?.addEventListener('click', function () {
-					jeeDialog.confirm({
-						title: '<i class="danger fas fa-question-circle"></i> Eteindre l\'équipement',
-						message: 'Etes-vous sûr de vouloir éteindre l\'équipement #name# ?',
-						buttons: {
-							confirm: {
-								label: 'Eteindre',
-								className: 'danger'
-							},
-							cancel: {
-								label: 'Annuler',
-								className: 'info'
-							}
-						},
-						callback: function (result) {
-							if (result) {
-								jeedom.cmd.execute({ id: '#cmd_poweroff_id#' });
-							}
-						}
-					});
-				});
+				if ('#fw_check#' == '1') {
+					document.getElementById('iconCheckFirmware#id#').innerHTML = '<i title="Check du Firmware :: 1" class="cmd monitor-btn fas fa-bell tooltips" style="display: #fw_check_display#;color: var(--al-success-color) !important;"></i>';
+				}
+				if ('#fw_check#' == '0') {
+					document.getElementById('iconCheckFirmware#id#').innerHTML = '<i title="Check du Firmware :: 0" class="cmd monitor-btn fas fa-bell-slash tooltips" style="display: #fw_check_display#;color: var(--al-danger-color) !important;"></i>';
+				}
 			</script>
 		</div>
 		<div class="widget-name monitor-name-center">
