--- a/core/template/dashboard/AsusWRT.html
+++ b/core/template/dashboard/AsusWRT.html
@@ -127,10 +127,10 @@
 			</script>
 			<span id="iconCheckFirmware#id#" class="cmd monitor-btn"></span>
 			<script>
-				if ('#fw_check#' == '1') {
+				if ('#asus_fw_check#' == '1') {
 					document.getElementById('iconCheckFirmware#id#').innerHTML = '<i title="Check du Firmware :: 1" class="cmd monitor-btn fas fa-bell tooltips" style="display: #fw_check_display#;color: var(--al-success-color) !important;"></i>';
 				}
-				if ('#fw_check#' == '0') {
+				if ('#asus_fw_check#' == '0') {
 					document.getElementById('iconCheckFirmware#id#').innerHTML = '<i title="Check du Firmware :: 0" class="cmd monitor-btn fas fa-bell-slash tooltips" style="display: #fw_check_display#;color: var(--al-danger-color) !important;"></i>';
 				}
 			</script>
